--- a/app/src/main/res/menu/btm_mainact_menu.xml
+++ b/app/src/main/res/menu/btm_mainact_menu.xml
@@ -2,23 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu1"
+        android:id="@+id/home"
         android:enabled="true"
         android:icon="@drawable/nav_home"
         android:title="Home"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/menu2"
+        android:id="@+id/notifications"
         android:icon="@drawable/nav_notifications"
         android:title="Notifications"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/menu3"
+        android:id="@+id/explore"
         android:icon="@drawable/nav_explore"
         android:title="Explore"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/menu4"
+        android:id="@+id/profile"
         android:icon="@drawable/nav_profile"
         android:title="Profile"
         app:showAsAction="ifRoom" />
